<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_input"
            style="@style/button_default"
            android:layout_width="match_parent"
            android:background="@drawable/bg_white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                style="@style/button_default"
                android:text="@string/button_clear" />

            <Button
                android:id="@+id/button_del"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_del" />

            <Button
                android:id="@+id/button_divide"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_divide" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="@style/button_default"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_8"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_9"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="@style/button_default"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_5"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_6"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button_plus"
                style="@style/button_default"
                android:layout_marginStart="10dp"
                android:text="@string/button_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_1"
                        style="@style/button_default"
                        android:text="@string/button_1" />

                    <Button
                        android:id="@+id/button_2"
                        style="@style/button_default"
                        android:layout_marginStart="10dp"
                        android:text="@string/button_2" />

                    <Button
                        android:id="@+id/button_3"
                        style="@style/button_default"
                        android:layout_marginStart="10dp"
                        android:text="@string/button_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_0"
                        style="@style/button_default"
                        android:layout_width="130dp"
                        android:text="@string/button_0" />

                    <Button
                        android:id="@+id/button_point"
                        style="@style/button_default"
                        android:layout_marginStart="10dp"
                        android:text="@string/button_point" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_equal"
                style="@style/button_default"
                android:layout_height="130dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/selector_orange"
                android:text="@string/button_equal" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>